Fix bug: remove horizontal scroll across all chapters
Fixes https://github.com/aimacode/aima-javascript/issues/141

--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,7 @@ pre{
 .navbar-inverse{
   border-radius: 0;
 }
+
+body > div.row {
+    margin-right: 0px;
+}
